# http4k/utils/src/main/kotlin/org/sollecitom/chassis/http4k/utils/lens/RequestExtensions.kt
@@ -12,8 +12,9 @@ val Request.contentType: ContentType? get() = Header.CONTENT_TYPE(this)
 fun <VALUE : Any> Request.body(value: VALUE, serializer: JsonSerializer<VALUE>) = body(serializer.serialize(value))
 
 fun Request.header(header: HttpHeader, value: String) = header(header.name, value)
+fun Request.replaceHeader(header: HttpHeader, value: String) = replaceHeader(header.name, value)
 
-fun Request.contentType(contentType: ContentType) = header(HttpHeaders.ContentType, contentType.toHeaderValue())
+fun Request.contentType(contentType: ContentType) = replaceHeader(HttpHeaders.ContentType, contentType.toHeaderValue())
 
 fun Request.contentLength(contentLength: Int) = contentLength(contentLength.toLong())
-fun Request.contentLength(contentLength: Long) = header(HttpHeaders.ContentLength, contentLength.toString())
+fun Request.contentLength(contentLength: Long) = replaceHeader(HttpHeaders.ContentLength, contentLength.toString())
